# Farmv2

./: .env.example  .gitignore  .replit  AOS_COMPREHENSIVE_CLAUDE.md  AOS_MASTER_RACIv6.xlsx  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  FARM_GUIDE.md  Makefile  QUICKSTART_NO_CLI.md  README.md  README_NUKE_CHECK.md  SETUP.md  farm_config.yaml  farm_config_cascadia.yaml  farm_config_meridian.yaml  farm_dcl_contract.md  invoices.csv  phase2_phase3_fixes.sh  pyproject.toml  reconcile_31c2fd26-2faf-4c54-9f88-1588c273bf9a.json  render.yaml  replit.md  requirements.txt
.claude/: settings.local.json
ONGOING PROMPTS/: NLQ_RAG_INSTR.md  galaxy-visualization-spec.md
ONGOING_PROMPTS/: AOS_MASTER_RACI_UPDATEDv4.xlsx  AOS_MASTER_RACIv5.xlsx  AOS_MASTER_RACIv6.csv  AOS_data_flow.md  ENTITY_VS_SNAPSHOT.md  PROMPT_1_AAM.md  PROMPT_2_FARM.md  PROMPT_3_DCL.md
RACIs/: FINAL_CONSOL_RACI.MD
attached_assets/: ApexEdge-JAFX_assessment_run_b774000cb4bd_1768591503680.md  BlueCorp-YJPA_assessment_run_95d3c0760bcc_1768489601132.md  BlueCorp-YJPA_assessment_run_a787bbe5ec9b_1768489027769.md  BlueEdge-5OF5_assessment_run_7dbc095329ab_1768589563845.md  BlueSystems-GE31_assessment_run_437e610412a3_1768511364824.md  BlueWave-0726_assessment_run_73f699a26897_1768587247276.md  BlueWave-ETB3_assessment_run_d58540b341d1_1768509187438.md  CloudDynamics-LUPM_assessment_run_89251669ca94_1768593588470.md  CloudEdge-HV8R_assessment_run_26a38023ae84_1768500580644.md  CloudWave-4MO3_assessment_run_ec8fe674a9ce_1768497979755.md  CloudWorks-Z6LF_assessment_run_05a2773f4838_1768501195521.md  (+117 more)
(+172 files in other folders)
